Header y estilos generales

--- a/index.html
+++ b/index.html
@@ -4,64 +4,69 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="./css/style.css" type="text/css">
   <title>Mi Blog</title>
 </head>
 <body>
-  <header class="header">
+  <div class="header">
     <div class="wrapper">
       <div class="header-content">
-        <p>
-          contenido
-        </p>
-        <nav>
-          <details open>
-            <summary>
-              Setup
-            </summary>
-            <ol>
-              <li>
-                <a href="#google-chrome">Google Chrome</a>
-              </li>
-              <li>
-                <a href="#vsc">Visual Studio Code</a>
-              </li>
-              <li>
-                <a href="#figma">Figma</a>
-              </li>
-              <li>
-                <a href="#github">Github</a>
-              </li>
-            </ol>
-          </details>
-          <details>
-            <summary>
-              Conceptos esenciales de Desarrollo Web
-            </summary>
-            <ol>
-              <li>
-                <a href="#html">HTML</a>
-              </li>
-              <li>
-                <a href="#etiquetas">Etiquetas</a>
-              </li>
-              <li>
-                <a href="#dom">DOM</a>
-              </li>
-              <li>
-                <a href="#semantica">Semantica</a>
-              </li>
-              <li>
-                <a href="#atributos">Atributos</a>
-              </li>
-              <li>
-                <a href="#css">CSS</a>
-              </li>
-            </ol>
-          </details>
-        </nav>
+        <header>
+          <p>
+            contenido
+          </p>
+          <nav>
+            <details open>
+              <summary>
+                Setup
+              </summary>
+              <ol>
+                <li>
+                  <a href="#google-chrome">Google Chrome</a>
+                </li>
+                <li>
+                  <a href="#vsc">Visual Studio Code</a>
+                </li>
+                <li>
+                  <a href="#figma">Figma</a>
+                </li>
+                <li>
+                  <a href="#github">Github</a>
+                </li>
+              </ol>
+            </details>
+            <details>
+              <summary>
+                Conceptos esenciales del Desarrollo Web
+              </summary>
+              <ol>
+                <li>
+                  <a href="#html">HTML</a>
+                </li>
+                <li>
+                  <a href="#etiquetas">Etiquetas</a>
+                </li>
+                <li>
+                  <a href="#dom">DOM</a>
+                </li>
+                <li>
+                  <a href="#semantica">Semantica</a>
+                </li>
+                <li>
+                  <a href="#atributos">Atributos</a>
+                </li>
+                <li>
+                  <a href="#css">CSS</a>
+                </li>
+              </ol>
+            </details>
+          </nav>
+        </header>
       </div>
     </div>
-  </header>
+  </div>
   <main class="main">
     <div class="wrapper">
       <h1>
@@ -76,7 +81,7 @@
         <h2>
           Setup
         </h2>
-        <img src="./images/google-chrome.png" alt="Logo de Google Chrome" title="Logo de Google Chrome">
+        <img id="google-chrome" src="./images/google-chrome.png" alt="Logo de Google Chrome" title="Logo de Google Chrome">
         <h3>
           Google Chrome
         </h3>
@@ -84,7 +89,7 @@
           Chrome va a ser el navegador que utilizaremos en el curso por su extenso soporte de nuevos estándares y herramientas de
           desarrollo avanzadas y de amigable uso.
         </p>
-        <img src="./images/visual-studio-code.png" alt="Logo de Visual Studio Code" title="Logo de Visual Studio Code">
+        <img id="vsc" src="./images/visual-studio-code.png" alt="Logo de Visual Studio Code" title="Logo de Visual Studio Code">
         <h3>
           Visual Studio Code
         </h3>
@@ -93,7 +98,7 @@
           extenderlo por medio de plugins lo hace el complemento perfecto para cualquier programador sin importar el lenguaje en
           el que se desemvuelva.
         </p>
-        <img src="./images/figma.png" alt="Logo de Figma" title="Logo de Figma">
+        <img id="figma" src="./images/figma.png" alt="Logo de Figma" title="Logo de Figma">
         <h3>
           Figma
         </h3>
@@ -101,7 +106,7 @@
           Figma es una la herramienta más popular en la actualidad para entregar diseños a los desarrolladores para su
           implementación por su fácil uso porque puede ser usado directamente desde el navegador.
         </p>
-        <img src="./images/github.png" alt="Logo de Github" title="Logo de Github">
+        <img id="github" src="./images/github.png" alt="Logo de Github" title="Logo de Github">
         <h3>
           Github
         </h3>
@@ -125,7 +130,7 @@
         <h2>
           Conceptos esenciales del Desarrollo Web
         </h2>
-        <h3>
+        <h3 id="html">
           HTML
         </h3>
         <p>
@@ -146,7 +151,7 @@
 &lt;/body&gt;
 &lt;/html&gt;
         </pre>
-        <h3>
+        <h3 id="etiquetas">
           Etiquetas
         </h3>
         <p>
@@ -159,7 +164,7 @@
           pequeña idea de su uso pero en este curso vamos a usar las más importantes y que serán parte de tu día a día como
           Software Developer.
         </p>
-        <h3>
+        <h3 id="dom">
           DOM
         </h3>
         <p>
@@ -168,7 +173,7 @@
           dependencias, herencias en css y que tan complejo es nuestro proyecto.
         </p>
         <img src="./images/dom.png" alt="Diagrama de árbol de Document Object Model" title="Diagrama de árbol de Document Object Model">
-        <h3>
+        <h3 id="semantica">
           Semántica
         </h3>
         <p>
@@ -178,7 +183,7 @@
           categorizar y será la herramientas más valiosa para estar en los primeros resultados de búsqueda SEO. También ayudará a
           la accesibilidad de tu sitio web, para que personas con habilidades diferentes puedan entender cada contenido.
         </p>
-        <h3>
+        <h3 id="atributos">
           Atributos
         </h3>
         <p>
@@ -186,7 +191,7 @@
           navegador, algunos atributos funcionan en todas las etiquetas de la misma forma como ‘class’ pero otros atributos
           funcionan en solo alguna etiquetas como src
         </p>
-        <h3>
+        <h3 id="css">
           CSS
         </h3>
         <p>
