seccion setup - blockquote / medium5

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         en el nivel 2 aprenderás de componentes y en 3 sobre layouts.
       </p>
       <hr>
-      <div class="section-content">
+      <div class="section-content setup">
         <h2>
           Setup
         </h2>
@@ -86,7 +86,7 @@
           Google Chrome
         </h3>
         <p>
-          Chrome va a ser el navegador que utilizaremos en el curso por su extenso soporte de nuevos estándares y herramientas de
+          Chrome va a ser <strong>el navegador que utilizaremos en el curso</strong> por su extenso soporte de nuevos estándares y herramientas de
           desarrollo avanzadas y de amigable uso.
         </p>
         <img id="vsc" src="./images/visual-studio-code.png" alt="Logo de Visual Studio Code" title="Logo de Visual Studio Code">
@@ -94,7 +94,7 @@
           Visual Studio Code
         </h3>
         <p>
-          Visual Studio Code es el editor de texto más popular y potente del mercado actualmente, su fácil uso y la capacidad de
+          Visual Studio Code es el <strong>editor de texto más popular y potente del mercado</strong> actualmente, su fácil uso y la capacidad de
           extenderlo por medio de plugins lo hace el complemento perfecto para cualquier programador sin importar el lenguaje en
           el que se desemvuelva.
         </p>
@@ -104,7 +104,7 @@
         </h3>
         <p>
           Figma es una la herramienta más popular en la actualidad para entregar diseños a los desarrolladores para su
-          implementación por su fácil uso porque puede ser usado directamente desde el navegador.
+          implementación por su <strong>fácil uso</strong> porque puede ser usado directamente desde el navegador.
         </p>
         <img id="github" src="./images/github.png" alt="Logo de Github" title="Logo de Github">
         <h3>
