section conceptos / medium4

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
           </span>
         </p>
       </blockquote>
-      <div class="section-content">
+      <div class="section-content conceptos">
         <h2>
           Conceptos esenciales del Desarrollo Web
         </h2>
@@ -150,7 +150,7 @@
 
 &lt;/body&gt;
 &lt;/html&gt;
-        </pre>
+</pre>
         <h3 id="etiquetas">
           Etiquetas
         </h3>
@@ -200,11 +200,11 @@
         </p>
         <img src="./images/css.png" alt="Reglas CSS" title="Reglas CSS">
       </div>
-      <div class="section-content">
+      <div class="section-content modelo">
         <h2>
           Modelo de caja
         </h2>
-        <h3>
+        <h3 class="regular">
           El modelo de caja está compuesto por:
         </h3>
         <p>
@@ -225,7 +225,7 @@
             Margin / Márgenes
           </li>
         </ol>
-        <h3>
+        <h3 class="semi">
           Propiedades físicas para el modelo de caja:
         </h3>
         <ul>
@@ -242,7 +242,7 @@
             padding / padding-top | padding-right | padding-bottom | padding-left
           </li>
         </ul>
-        <h3>
+        <h3 class="semi">
           Propiedades lógicas para el modelo de caja:
         </h3>
         <ul>
@@ -259,6 +259,9 @@
             padding-block | padding-inline | padding-block-start | padding-block-end | padding-inline-start | padding-inline-end
           </li>
         </ul>
+        <h3 class="regular">
+          Modelo de caja
+        </h3>
       </div>
     </div>
   </main>
