section slider - form / medium5

--- a/index.html
+++ b/index.html
@@ -262,6 +262,39 @@
         <h3 class="regular">
           Modelo de caja
         </h3>
+        <div class="slider">
+          <scroll-container class="slider-container">
+            <scroll-page id="page-1" class="slider-slide">
+              <iframe width="100%" height="315" src="https://www.youtube.com/embed/5f5Ig_U2Bpk" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+            </scroll-page>
+            <scroll-page id="page-2" class="slider-slide">
+              <iframe width="100%" height="315" src="https://www.youtube.com/embed/5f5Ig_U2Bpk" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+            </scroll-page>
+            <scroll-page id="page-3" class="slider-slide">
+              <iframe width="100%" height="315" src="https://www.youtube.com/embed/5f5Ig_U2Bpk" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+            </scroll-page>
+          </scroll-container>
+          <div class="bullet-list">
+            <a href="#page-1" ></a>
+            <a href="#page-2"></a>
+            <a href="#page-3"></a>
+          </div>
+        </div>
+      </div>
+      <p class="contact-me">Si tienes alguna pregunta escríbeme a <a href="mailto:me@leonidasesteban.com">me@leonidasesteban.com</a></p>
+      <div class="form">
+        <form action="#">
+          <p>Suscribirse a nuestro newsletter</p>
+          <input type="text" placeholder="Nombre">
+          <input type="email" placeholder="Correo electrónico">
+          <input type="submit" value="Suscribirme">
+        </form>
       </div>
     </div>
   </main>
