section footer/medium5

--- a/index.html
+++ b/index.html
@@ -291,12 +291,20 @@
       <div class="form">
         <form action="#">
           <p>Suscribirse a nuestro newsletter</p>
-          <input type="text" placeholder="Nombre">
-          <input type="email" placeholder="Correo electrónico">
+          <input type="text" placeholder="Nombre" required>
+          <input type="email" placeholder="Correo electrónico" required>
           <input type="submit" value="Suscribirme">
         </form>
       </div>
     </div>
   </main>
+  <footer class="footer">
+    <p>&copy; Leonidas Esteban 2021</p>
+    <div class="social">
+      <img src="images/instagram.png" alt="Logo de Instagram" title="Logo de Instagram">
+      <img src="images/facebook.png" alt="Logo de Facebook" title="Logo de Facebook">
+      <img src="images/twitter.png" alt="Logo de Twitter" title="Logo de Twitter">
+    </div>
+  </footer>
 </body>
 </html>
